--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ FLASK_RUN_PORT = 5000
 SECRET_KEY = b'+\xcb\x0f\xa0\x02\x12\xd8\x16\xd4w\xb8i\xac\xd0?I'
 
 # DB base configuration for modularity and security reasons
-DB_URI = 'mongodb+srv://reut:Reut1234@applespot.ngwgp.mongodb.net'
+DB_URI = 'mongodb+srv://reut:Reut1234@applespot.ngwgp.mongodb.net/?retryWrites=true&w=majority&appName=applespot'
