--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ bson==0.5.10
 Flask-PyMongo==2.3.0
 Flask-Cors==3.0.10
 bcrypt==3.2.0
-python-dateutil==2.8.2 
+python-dateutil==2.8.2
+certifi==2023.7.22 
